--- a/app/src/main/res/layout/activity_admin_interface.xml
+++ b/app/src/main/res/layout/activity_admin_interface.xml
@@ -11,11 +11,12 @@
         android:id="@+id/interface_Add_Work"
         android:layout_width="164dp"
         android:layout_height="60dp"
+        android:layout_marginTop="68dp"
         android:text="Abrechnung"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="403dp" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView8" />
 
     <Button
         android:id="@+id/Abrechnung"
@@ -43,12 +44,11 @@
         android:id="@+id/imageView8"
         android:layout_width="308dp"
         android:layout_height="351dp"
-        android:layout_marginTop="28dp"
-        app:layout_constraintBottom_toTopOf="@+id/interface_Add_Work"
+        android:layout_marginTop="40dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/open" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
