--- a/app/src/main/res/layout/activity_interface.xml
+++ b/app/src/main/res/layout/activity_interface.xml
@@ -21,10 +21,12 @@
         android:id="@+id/SignUp"
         android:layout_width="202dp"
         android:layout_height="56dp"
+        android:layout_marginTop="40dp"
         android:text="Sign Up"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="508dp" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <ImageView
         android:id="@+id/imageView"
