--- a/app/src/main/res/layout/activity_interface_work_add.xml
+++ b/app/src/main/res/layout/activity_interface_work_add.xml
@@ -23,10 +23,11 @@
         android:id="@+id/spinner2"
         android:layout_width="239dp"
         android:layout_height="48dp"
+        android:layout_marginBottom="272dp"
         android:contentDescription="@string/tax_deprication"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="391dp" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/imageView11"
@@ -44,7 +45,7 @@
         android:id="@+id/chack_Project"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:text="Project"
+        android:text="Private"
         app:layout_constraintBottom_toBottomOf="@+id/check_Bachelor"
         app:layout_constraintEnd_toStartOf="@+id/check_Bachelor"
         app:layout_constraintHorizontal_bias="0.398"
@@ -56,7 +57,7 @@
         android:id="@+id/check_Bachelor"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:text="Bachelor"
+        android:text="Buisiness"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.798"
@@ -112,8 +113,11 @@
         android:id="@+id/btn_setWork"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="44dp"
         android:text="Upload"
-        tools:layout_editor_absoluteX="140dp"
-        tools:layout_editor_absoluteY="663dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.484"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
