--- a/app/src/main/res/layout/activity_admin_delete_user.xml
+++ b/app/src/main/res/layout/activity_admin_delete_user.xml
@@ -100,7 +100,7 @@
                 android:layout_height="100dp"
                 android:layout_marginLeft="35dp"
                 android:layout_marginTop="20dp"
-                android:hint="WRITE TITLE"
+                android:hint="Private"
                 android:text=""
                 android:textColorHint="#757575" />
 
@@ -110,7 +110,7 @@
                 android:layout_height="100dp"
                 android:layout_marginLeft="35dp"
                 android:layout_marginTop="20dp"
-                android:hint="Write USER"
+                android:hint="Business"
                 android:text=""
                 android:textColorHint="#757575" />
         </LinearLayout>
@@ -135,10 +135,10 @@
                 android:id="@+id/Delete_Private"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
-                android:layout_marginLeft="47dp"
+                android:layout_marginLeft="17dp"
                 android:layout_marginTop="20dp"
                 android:background="#400000"
-                android:text="DELETE Work"
+                android:text="Delete Private"
                 android:textColor="#ffffff" />
 
             <Button
@@ -148,7 +148,7 @@
                 android:layout_marginLeft="47dp"
                 android:layout_marginTop="20dp"
                 android:background="#400000"
-                android:text="DELETE User"
+                android:text="Delete Business"
                 android:textColor="#ffffff" />
 
         </LinearLayout>
