--- a/app/src/main/res/layout/activity_rob_toolbar.xml
+++ b/app/src/main/res/layout/activity_rob_toolbar.xml
@@ -12,10 +12,13 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:minWidth="48dp"
+        android:minHeight="48dp"
         android:onClick="clickMenu"
-        android:src="@drawable/ic_menu"/>
+        android:src="@drawable/ic_menu" />
 
     <TextView
+        android:id="@+id/tv_toolbarText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/navigatorText"
