--- a/app/src/main/res/layout/activity_interface_work_add.xml
+++ b/app/src/main/res/layout/activity_interface_work_add.xml
@@ -115,6 +115,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="44dp"
         android:text="Upload"
+        android:backgroundTint="@color/black"
+        android:textColorHint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.484"
