--- a/app/src/main/res/layout/activity_admin_delete_user.xml
+++ b/app/src/main/res/layout/activity_admin_delete_user.xml
@@ -27,6 +27,10 @@
         </LinearLayout>
     </ScrollView>
 
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
     <HorizontalScrollView
         android:layout_marginLeft="10dp"
         android:layout_width="match_parent"
@@ -77,12 +81,6 @@
                 android:text="" />
         </LinearLayout>
     </ScrollView>
-
-
-
-
-
-
 
     <HorizontalScrollView
         android:layout_marginLeft="20dp"
