--- a/app/src/main/res/layout/activity_rob_addbill.xml
+++ b/app/src/main/res/layout/activity_rob_addbill.xml
@@ -19,10 +19,10 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:gravity="center"
             android:text="@string/addnewbill"
             android:textSize="30sp"
-            android:textStyle="bold"
-            android:gravity="center"/>
+            android:textStyle="bold" />
     </LinearLayout>
 
     <RelativeLayout
