--- a/app/src/main/res/layout/activity_rob_main.xml
+++ b/app/src/main/res/layout/activity_rob_main.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".rob_main"
+    tools:context=".Admin.Main"
     android:id="@+id/drawer_layout">
 
     <LinearLayout
@@ -16,13 +16,55 @@
         <include
             layout="@layout/activity_rob_toolbar" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/home"
-            android:textSize="30sp"
-            android:textStyle="bold"
-            android:gravity="center"/>
+        <HorizontalScrollView
+            android:layout_width="wrap_content"
+            android:layout_height="97dp"
+            android:layout_marginLeft="10dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <Button
+                    android:id="@+id/Private_Button"
+                    android:layout_width="150dp"
+                    android:layout_height="70dp"
+                    android:layout_marginLeft="35dp"
+                    android:layout_marginTop="20dp"
+                    android:background="#400000"
+                    android:text="Private Bills"
+                    android:textColor="#ffffff" />
+
+                <Button
+                    android:id="@+id/Business_Button"
+                    android:layout_width="150dp"
+                    android:layout_height="70dp"
+                    android:layout_marginLeft="35dp"
+                    android:layout_marginTop="20dp"
+                    android:background="#400000"
+                    android:text="Buisness Bill"
+                    android:textColor="#ffffff" />
+
+            </LinearLayout>
+        </HorizontalScrollView>
+
+        <ScrollView
+            android:layout_width="349dp"
+            android:layout_height="584dp"
+            android:layout_marginLeft="20dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/txt_Display_User"
+                    android:layout_width="match_parent"
+                    android:layout_height="76dp"
+                    android:text="" />
+            </LinearLayout>
+        </ScrollView>
+
     </LinearLayout>
 
     <LinearLayout
@@ -32,6 +74,14 @@
         android:background="@android:color/white">
 
         <include layout="@layout/activity_rob_nav_drawer" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/home"
+            android:textSize="30sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
