--- a/app/src/main/res/layout/activity_rob_main.xml
+++ b/app/src/main/res/layout/activity_rob_main.xml
@@ -26,7 +26,7 @@
                 android:layout_height="wrap_content">
 
                 <Button
-                    android:id="@+id/Private_Button"
+                    android:id="@+id/Main_b_private"
                     android:layout_width="150dp"
                     android:layout_height="70dp"
                     android:layout_marginLeft="35dp"
@@ -36,7 +36,7 @@
                     android:textColor="#ffffff" />
 
                 <Button
-                    android:id="@+id/Business_Button"
+                    android:id="@+id/Main_b_buisness"
                     android:layout_width="150dp"
                     android:layout_height="70dp"
                     android:layout_marginLeft="35dp"
@@ -49,8 +49,8 @@
         </HorizontalScrollView>
 
         <ScrollView
-            android:layout_width="349dp"
-            android:layout_height="584dp"
+            android:layout_width="337dp"
+            android:layout_height="502dp"
             android:layout_marginLeft="20dp">
 
             <LinearLayout
@@ -58,7 +58,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/txt_Display_User"
+                    android:id="@+id/Display_Info"
                     android:layout_width="match_parent"
                     android:layout_height="76dp"
                     android:text="" />
