--- a/app/src/main/res/layout/add_bill.xml
+++ b/app/src/main/res/layout/add_bill.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Admin.Abrechnung"
+    tools:context=".Admin.Add_Bill"
     tools:layout_editor_absoluteX="16dp"
     tools:layout_editor_absoluteY="-273dp">
 
