--- a/app/src/main/res/layout/activity_rob_addbill.xml
+++ b/app/src/main/res/layout/activity_rob_addbill.xml
@@ -31,6 +31,11 @@
         android:layout_gravity="start"
         android:background="@android:color/white">
 
-        <include layout="@layout/activity_rob_nav_drawer"/>
+        <include
+            layout="@layout/activity_rob_nav_drawer"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="0dp"
+            android:layout_marginBottom="0dp" />
     </RelativeLayout>
 </androidx.drawerlayout.widget.DrawerLayout>
