--- a/app/src/main/res/layout/add_bill.xml
+++ b/app/src/main/res/layout/add_bill.xml
@@ -122,4 +122,17 @@
         app:layout_constraintHorizontal_bias="0.484"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <Button
+        android:id="@+id/btn_camera"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Open Camera"
+        android:backgroundTint="@color/black"
+        android:textColorHint="@color/white"
+        app:layout_constraintTop_toBottomOf="@id/btn_setWork"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.484"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
