--- a/app/src/main/res/layout/start.xml
+++ b/app/src/main/res/layout/start.xml
@@ -10,60 +10,11 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="202dp"
         android:orientation="vertical">
 
         <include
             layout="@layout/activity_rob_toolbar" />
-
-        <HorizontalScrollView
-            android:layout_width="wrap_content"
-            android:layout_height="97dp"
-            android:layout_marginLeft="10dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <Button
-                    android:id="@+id/Main_b_private"
-                    android:layout_width="150dp"
-                    android:layout_height="70dp"
-                    android:layout_marginLeft="35dp"
-                    android:layout_marginTop="20dp"
-                    android:background="#400000"
-                    android:text="Private Bills"
-                    android:textColor="#ffffff" />
-
-                <Button
-                    android:id="@+id/Main_b_buisness"
-                    android:layout_width="150dp"
-                    android:layout_height="70dp"
-                    android:layout_marginLeft="35dp"
-                    android:layout_marginTop="20dp"
-                    android:background="#400000"
-                    android:text="Buisness Bill"
-                    android:textColor="#ffffff" />
-
-            </LinearLayout>
-        </HorizontalScrollView>
-
-        <ScrollView
-            android:layout_width="337dp"
-            android:layout_height="502dp"
-            android:layout_marginLeft="20dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:id="@+id/Display_Info"
-                    android:layout_width="match_parent"
-                    android:layout_height="76dp"
-                    android:text="" />
-            </LinearLayout>
-        </ScrollView>
 
     </LinearLayout>
 
@@ -77,11 +28,71 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="200dp"
             android:gravity="center"
             android:text="@string/home"
             android:textSize="30sp"
             android:textStyle="bold" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_marginTop="100dp">
+
+        <HorizontalScrollView
+            android:layout_width="wrap_content"
+            android:layout_height="97dp">
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="120dp">
+
+                <Button
+                    android:id="@+id/Main_b_private"
+                    android:layout_width="150dp"
+                    android:layout_height="70dp"
+                    android:layout_marginLeft="35dp"
+                    android:layout_marginTop="20dp"
+                    android:background="#400000"
+                    android:text="Private Bills"
+                    android:textColor="#ffffff" />
+
+                <Button
+                    android:id="@+id/Main_b_Business"
+                    android:layout_width="150dp"
+                    android:layout_height="70dp"
+                    android:layout_marginLeft="35dp"
+                    android:layout_marginTop="20dp"
+                    android:background="#400000"
+                    android:text="Buisness Bill"
+                    android:textColor="#ffffff" />
+
+            </LinearLayout>
+        </HorizontalScrollView>
+
+        <ScrollView
+            android:layout_width="380dp"
+            android:layout_height="390dp"
+            android:layout_marginTop="30dp">
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="400dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/Display_Info"
+                    android:layout_width="380dp"
+                    android:layout_height="400dp"
+                    android:text="" />
+
+            </LinearLayout>
+        </ScrollView>
 
     </LinearLayout>
 
